--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
       - ./:/home/jovyan/work
     ports:
       - "8888:8888"
+      - "8265:8265"
+    shm_size: "2gb"
     command: jupyter notebook --NotebookApp.token=''
-
